--- a/index.html
+++ b/index.html
@@ -28,15 +28,39 @@
             <p>
                 A palavra “computador” vem do verbo “computar” que, por sua vez, significa “calcular”. Sendo assim, podemos pensar que a criação de computadores começa na idade antiga, já que a relação de contar já intrigava os homens. Dessa forma, uma das primeiras máquinas de computar foi o “ábaco”, instrumento mecânico de origem chinesa criado no século V a.C. Assim, ele é considerado o <strong>“primeiro computador”</strong>, uma espécie de calculadora que realizava operações algébricas.
             </p>
+            
             <p>
-                No século XVII, o matemático escocês John Napier foi um dos responsáveis pela invenção da "régua de cálculo". Trata-se do primeiro instrumento analógico de contagem capaz de efetuar cálculos logaritmos. Essa invenção foi considerada a mãe das calculadoras modernas. Por volta de 1640, o matemático francês Pascal inventou a primeira máquina de calcular automática. Essa máquina foi sendo aperfeiçoada nas décadas seguintes até chegar no conceito que conhecemos hoje.
+                Máquinas de Contagem (Antiguidade): O conceito de contar e calcular remonta à antiguidade. Ábacos e outros dispositivos mecânicos simples foram usados por várias civilizações para realizar cálculos básicos.
             </p>
+
             <p>
-                A primeira calculadora de bolso capaz de efetuar os quatro principais cálculos matemáticos, foi criada por Gottfried Wilhelm Leibniz. Esse matemático alemão desenvolveu o primeiro sistema de numeração binário moderno que ficou conhecido com "Roda de Leibniz".
+                Máquina Analítica de Charles Babbage (século XIX): Considerado o "pai do computador", Charles Babbage projetou a Máquina Analítica no século XIX. Embora nunca tenha sido construída em sua totalidade durante sua vida, o projeto de Babbage incluía elementos fundamentais de um computador moderno, como a unidade de controle, a unidade aritmética e a memória.
             </p>
+
             <p>
-                George Boole (1815-1864) foi um dos fundadores da lógica matemática. Essa nova área da matemática, se tornou uma poderosa ferramenta no projeto e estudo de circuitos eletrônicos e arquitetura de computadores.Já no século XIX, o matemático inglês Charles Babbage criou uma máquina analítica que, a grosso modo, <mark>é comparada com o computador atual com memória e programas.</mark>
+                Primeiros Computadores Eletromecânicos (início do século XX): Durante a Primeira Guerra Mundial, máquinas como a "Mark I" de Howard Aiken e a "ENIAC" (Electronic Numerical Integrator and Computer), construída nos anos 1940, foram alguns dos primeiros computadores eletromecânicos.
             </p>
+
+            <p>
+                Era dos Transistores (década de 1950): A invenção do transistor na década de 1940 permitiu a miniaturização dos componentes eletrônicos e a criação de computadores mais eficientes. Isso marcou o início da era dos computadores de segunda geração.
+            </p>
+
+            <p>
+                Desenvolvimento dos Circuitos Integrados (década de 1960): A criação dos circuitos integrados permitiu a integração de vários transistores em um único chip, resultando em computadores menores, mais rápidos e mais confiáveis.
+            </p>
+
+            <p>
+                Era dos Microprocessadores (década de 1970): O desenvolvimento do microprocessador, como o Intel 4004, marcou o surgimento dos computadores pessoais. Empresas como Apple e Microsoft desempenharam papéis significativos nessa fase.
+            </p>
+
+            <p>
+                Computação Pessoal e a Internet (décadas de 1980 e 1990): O aumento da capacidade de processamento, a popularização dos computadores pessoais e a expansão da Internet transformaram a sociedade e a forma como as pessoas interagem com a informação.
+            </p>
+
+            <p>
+                Era Contemporânea (século XXI): Avanços contínuos em hardware, software, inteligência artificial, aprendizado de máquina e computação em nuvem têm definido a era contemporânea dos computadores. Tecnologias como smartphones, tablets e dispositivos vestíveis também se tornaram onipresentes.
+            </p>
+
         <h2 id="cliente-servidor">2. O que são clientes e servidores?</h2>
             <p>
                 Um servidor é um recurso dentro de um sistema computacional, capaz de processar aplicações, armazenar dados e prestar serviços, enquanto o cliente é um computador que solicita esses serviços e recursos. Em uma infraestrutura de TI, ambos formam a arquitetura conhecida como “cliente-servidor”. Uma estrutura cliente-servidor é um modelo de arquitetura de rede em que um programa de computador (cliente), solicita um serviço ou recurso de outro programa de computador (servidor), recebendo uma resposta com as informações solicitadas por meio de protocolos de rede em infraestruturas de TI.
